--- a/index.html
+++ b/index.html
@@ -6,7 +6,10 @@
 <body>
 
 <h1>Love pet adoption</h1>
-<p></p>
+<p><strong>Business Name:</strong>Loved Pets Animal Shelter</p>
+<p><strong>Address:</strong>6645 Watergrass Cir., Springfield, Arizona 11645</p>
+<p><strong>Phone #:</strong> (555) 476-2984</p>
+<p><strong>Contact Email:</strong> josie@welovepets.com</p>
 
 </body>
 </html>
