--- a/index.html
+++ b/index.html
@@ -11,5 +11,7 @@
 <p><strong>Phone #:</strong> (555) 476-2984</p>
 <p><strong>Contact Email:</strong> josie@welovepets.com</p>
 
+ <p><strong>Hours of operation:</strong></p> 
+
 </body>
 </html>
