--- a/index.html
+++ b/index.html
@@ -12,6 +12,15 @@
 <p><strong>Contact Email:</strong> josie@welovepets.com</p>
 
  <p><strong>Hours of operation:</strong></p> 
+ <ul>
+  <li>Monday: 8am - 5pm</li>
+  <li>Tuesday: 8am - 5pm</li>
+  <li>Wednesday: 8am - 8pm</li>
+  <li>Thursday: 8am - 5pm</li>
+  <li>Friday: 8am - 12pm</li>
+  <li>Saturday: 8am - 12pm</li>
+  <li>Sunday: Closed</li>
+</ul>
 
 </body>
 </html>
