--- a/index.html
+++ b/index.html
@@ -21,8 +21,9 @@
   <li>Saturday: 8am - 12pm</li>
   <li>Sunday: Closed</li>
 </ul>
-
+<center>
  <h1>Our philosophy</h1>
+ </center>
  <p>At Loved Pets Animal Rescue, we believe all animals deserve a chance to find a loving forever home.
 We provide initial veterinary care to rescued animals, then work to match each animal with a human
 family to love them and keep them safe forever. All animals are screened for diseases upon arrival,
