--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 </head>
 <body>
 
-<h1>Love pet adoption</h1>
+<h1>Love Pet Adoption</h1>
 <p><strong>Business Name:</strong>Loved Pets Animal Shelter</p>
 <p><strong>Address:</strong>6645 Watergrass Cir., Springfield, Arizona 11645</p>
 <p><strong>Phone #:</strong> (555) 476-2984</p>
@@ -36,6 +36,12 @@ screening rooms, and help with administrative tasks in the office. If you’re i
 please complete the steps below.</p>
 
 <h1>How to become a volunteer</h1> 
+ <ol>
+  <li>Complete the online application</li>
+  <li>Submit the application by emailing it to volunteer@welovepets.com</li>
+  <li>Participate in a brief phone interview</li>
+  <li>Attend a volunteer training session on the first Saturday of every month</li>
+</ol>
 
 </body>
 </html>
