--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@ please complete the steps below.</p>
   <li>Participate in a brief phone interview</li>
   <li>Attend a volunteer training session on the first Saturday of every month</li>
 </ol>
- <img cats_two.jpg alt="Girl in a jacket" style="width:200px;height:210px;">
+ <img src="cats_two.jpg" alt="two cats" style="width:500px;height:600px;">
 
 </body>
 </html>
