--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@ please complete the steps below.</p>
   <li>Participate in a brief phone interview</li>
   <li>Attend a volunteer training session on the first Saturday of every month</li>
 </ol>
- <img src="pic_trulli.jpg" alt="Trulli" width="100" height="100
+ <img src="cocoa.jpg" width="100" height="100
 23">
 
 </body>
