--- a/index.html
+++ b/index.html
@@ -42,8 +42,7 @@ please complete the steps below.</p>
   <li>Participate in a brief phone interview</li>
   <li>Attend a volunteer training session on the first Saturday of every month</li>
 </ol>
- <img src="cocoa.jpg" width="100" height="100
-23">
+ <img src="cocoa.jpg" width="300" height="280">
 
 </body>
 </html>
