--- a/index.html
+++ b/index.html
@@ -1,16 +1,26 @@
 <!DOCTYPE html>
 <html>
 <head>
+<style>
+.city {
+  background-color: tomato;
+  color: white;
+  border: 2px solid black;
+  margin: 20px;
+  padding: 20px;
+}
+</style>
 <title>Pet adoption</title>
 
 </head>
 <body>
- 
+ <div class="city">
 <h1>Love Pet Adoption</h1>
 <p><strong>Business Name:</strong>Loved Pets Animal Shelter</p>
 <p><strong>Address:</strong>6645 Watergrass Cir., Springfield, Arizona 11645</p>
 <p><strong>Phone #:</strong> (555) 476-2984</p>
 <p><strong>Contact Email:</strong> josie@welovepets.com</p>
+ </div> 
 
  <p><strong>Hours of operation:</strong></p> 
  <ul>
