--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <style>
 .city {
   background-color: SlateBlue ;
-  color: white;
+  color: dark purple ;
   border: 2px solid black;
   margin: 20px;
   padding: 20px;
