--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 </head>
 <body>
  <div class="city">
+<img src="cirle-medium.jpg" width="200" height="280">
 <h1>Love Pet Adoption</h1>
 <p><strong>Business Name:</strong>Loved Pets Animal Shelter</p>
 <p><strong>Address:</strong>6645 Watergrass Cir., Springfield, Arizona 11645</p>
@@ -56,6 +57,7 @@ please complete the steps below.</p>
   <li>Attend a volunteer training session on the first Saturday of every month</li>
 </ol>
  <img src="cocoa.jpg" width="300" height="280">
+  
 
 </body>
 </html>
