--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 </head>
 <body>
-<img src="cocoa.jpg" width="100" height="100">
+<img src="cirle-medium.png" width="100" height="100">
  <div class="city">
 <h1>Love Pet Adoption</h1>
 <p><strong>Business Name:</strong>Loved Pets Animal Shelter</p>
