--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@ please complete the steps below.</p>
   <li>Attend a volunteer training session on the first Saturday of every month</li>
 </ol>
  <img src="cocoa.jpg" width="300" height="280">
+  <p>coca</p>
   
 
 </body>
