--- a/index.html
+++ b/index.html
@@ -57,7 +57,8 @@ please complete the steps below.</p>
   <li>Attend a volunteer training session on the first Saturday of every month</li>
 </ol>
  <img src="cocoa.jpg" width="300" height="280">
-  <p>coca</p>
+  <h2>coca</h2>
+  <p>this is a dog</p>
   
 
 </body>
