--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@ please complete the steps below.</p>
 </ol>
  <img src="cocoa.jpg" width="300" height="280">
   <h2>coca</h2>
-  <p>this is a dog</p>
+  <p><strong>this is a dog</strong></p>
   
 
 </body>
