--- a/index.html
+++ b/index.html
@@ -57,8 +57,8 @@ please complete the steps below.</p>
   <li>Attend a volunteer training session on the first Saturday of every month</li>
 </ol>
  <img src="cocoa.jpg" width="300" height="280">
-  <h4>coca</h4>
-  <p><strong>this is a dog</strong></p>
+  <h1>coca</h1>
+  <p><strong>this is a dog that wants a home to stay </strong></p>
   
 
 </body>
