--- a/index.html
+++ b/index.html
@@ -9,8 +9,11 @@
   margin: 20px;
   padding: 20px;
 }
+  
 </style>
 <title>Pet adoption</title>
+
+background-color: #471383;
 
 </head>
 <body>
@@ -58,7 +61,11 @@ please complete the steps below.</p>
 </ol>
  <img src="cocoa.jpg" width="300" height="280">
   <h1>coca</h1>
-  <p><strong>this is a dog that wants a home to stay </strong></p>
+  <table style="width:100%">
+  <tr>
+    <td>dog</td>
+    </tr>
+</table>
   
 
 </body>
