--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@ please complete the steps below.</p>
   <h1>coca</h1>
   <table style="width:60%">
   <tr>
-    <td>dog</td>
+    <td>this is a Coca that wants a home to stay and really be safe.Coca is dog that likes to play a lot and gets along with others even at kids which would be great pet in the family</td>
     </tr>
 </table>
   
