--- a/index.html
+++ b/index.html
@@ -66,9 +66,9 @@ please complete the steps below.</p>
 </ol>
  <img src="cocoa.jpg" width="300" height="280">
   <h1>coca</h1>
-  <table style="width:60%">
+  <table style="width:40%">
   <tr>
-    <td>this is a Coca that wants a home to stay and really be safe.Coca is dog that likes to play a lot and gets along with others even at kids which would be great pet in the family</td>
+    <td>this is a Coca that wants a home to stay and really be safe.Coca is dog that likes to play a lot and gets along with others even at kids which would be great pet memeber in the family but also it would grow vety big so it needs a lot of space </td>
     </tr>
 </table>
   
