--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@ please complete the steps below.</p>
   <h1>coca</h1>
   <table style="width:40%">
   <tr>
-    <td>this is a Coca that wants a home to stay and really be safe.Coca is dog that likes to play a lot and gets along with others even at kids which would be great pet memeber in the family but also it would grow vety big so it needs a lot of space </td>
+    <td>this is a Coca that wants a home to stay and really be safe.Coca is dog that likes to play a lot and gets along with others even at kids which would be great pet memeber in the family but also it would grow vety big so you would need a lot of space for Coca so it could more around and enjoy the space they hsve inside the house which is good for the dog that needs somewhere to live </td>
     </tr>
 </table>
   
