--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@ table, th, td {
 </style>
 <title>Pet adoption</title>
 
-background-color: #471383;
+
 
 </head>
 <body>
-<img src="cirle-medium.png" width="100" height="100">
+<img src="circle-medium.png" width="100" height="100">
  <div class="city">
 <h1>Love Pet Adoption</h1>
 <p><strong>Business Name:</strong>Loved Pets Animal Shelter</p>
