--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@ table, th, td {
   
 .city {
   background-color: SlateBlue ;
-  color: #4c00e6 ;
+  color: #5900b3 ;
   border: 2px solid black;
   margin: 20px;
   padding: 20px;
