--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@ table, th, td {
   margin: 20px;
   padding: 20px;
 }
+  body { background-color: #cc99ff ; 
+       }
+
   
 </style>
 <title>Pet adoption</title>
