--- a/index.html
+++ b/index.html
@@ -25,7 +25,11 @@ table, th, td {
 
 </head>
 <body>
+  
+<center>
 <img src="circle-medium.png" width="100" height="100">
+</center>
+  
  <div class="city">
 <h1>Love Pet Adoption</h1>
 <p><strong>Business Name:</strong>Loved Pets Animal Shelter</p>
